--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.3.0",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
@@ -20,8 +21,11 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^3.0.1",
+        "chart.js": "^4.2.1",
         "vue": "^3.2.36",
+        "vue-chartjs": "^5.2.0",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.0.13"
     }
